--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "extends": "airbnb",
-  "parser": "babel-eslint",
+  "extends":  ["airbnb"],
+  //"parser": "babel-eslint",
   "env": {
     "browser": true
   },
@@ -18,7 +18,7 @@
         "allowSamePrecedence": true
       }
     ],
-    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "warn",
     "jsx-a11y/href-no-hash": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/mouse-events-have-key-events": "off",
