--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1"
+    "semantic-ui-react": "^2.0.1",
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
